--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto quod fugit veritatis est rerum id in aut quis animi accusantium harum illo cumque magnam velit minima facilis ducimus atque architecto repellat, molestias delectus? Veritatis itaque corrupti voluptatem quam, unde sapiente placeat in facere, ipsum enim odio provident ex nihil asperiores est optio, at aspernatur voluptatum.</p>
+    <button>p</button>
+
 </body>
 </html>
